<resources>
    <string name="app_name">Centro de beleza Capelli</string>
    <string name="facebook_app_id">263808017358235</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="sobreNome">Sobrenome</string>
    <string name="telefone">Telefone</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="repetir_senha">Repetir Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senhas_nao_conferem">Senhas não conferem</string>
    <string name="senha_muito_pequena">Senha deve ter mais de 6 caracteres</string>
    <string name="todos_campos_devem_ser_preenchidos">Todos os campos devem ser preenchidos</string>
    <string name="categoria">Categoria</string>

    <string name="mensagem_dashboard">Araste a lateral esquerda para acessar o Menu</string>
    <string name="action_settings">Settings</string>
    <string name="centro_beleza_capelli">Centro de Beleza Capelli</string>
    <string name="numero_telefone">(41) 3343-9909</string>
    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="servicos">Serviços</string>
    <string name="login">Login</string>
    <string name="erro_login">Não logado. Tente novamente</string>
    <string name="cadastro_clientes">Cadastro de Clientes</string>
    <string name="cadastro_categorias">Cadastro de Categorias</string>
    <string name="lista_servicos">Lista de Serviços</string>
    <string name="usuario">Usuario</string>
    <string name="valor">Valor</string>
    <string name="tempo_estimado">Tempo Estimado</string>
    <string name="categoria_gravada_com_sucesso">Categoria gravada com sucesso</string>
    <string name="cadastro_servicos">Cadastro de Serviços</string>
    <string name="logoff">Logoff</string>
    <string name="sair">Sair</string>
    <string name="campo_obrigatorio">Obrigatório</string>
    <string name="logado_com_sucesso">Logado com sucesso!</string>
    <string name="usuario_nao_cadastrado_tente_mais_tarde">Usuário não cadastrado, tente mais tarde.</string>
    <string name="cadastro_promocao">Cadastro de Promoções</string>
    <string name="descricao">Descrição</string>
    <string name="porcentagem_desconto">% do desconto</string>
    <string name="ativa">Ativa</string>
    <string name="inicio">Inicio</string>
    <string name="data_fim">Data Fim (01/01/2017)</string>
    <string name="data_inicio">Data Início (01/01/2017)</string>
    <string name="selecione_uma_categoria">SELECIONE UMA CATEGORIA</string>
    <string name="categoria_cadastrada">Categoria cadastrada com sucesso!</string>
    <string name="email_ou_senha_inválidos">E-mail e/ou Senha inválidos</string>
    <string name="senha_muito_fraca">Senha muito fraca, tente novamente!</string>
    <string name="email_invalido">Email inválido</string>
    <string name="email_ja_cadastrado">Email já cadastrado</string>
    <string name="erro_efetuar_cadastro">Erro ao efetuar cadastro</string>
    <string name="erro_ao_cadastrar">Erro ao cadastrar</string>
    <string name="formato_data_invalido">Formato de data inválido (dd/mm/aaaa)</string>
    <string name="promocao_cadastrada_com_sucesso">Promoção cadastrada com sucesso!</string>
    <string name="redefinir_senha">Redefinir Senha</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="email_enviado">Email enviado!</string>
    <string name="cadastro_funcionario">Cadastro de funcionário</string>
    <string name="razao_social">Razão Social</string>
    <string name="cadastro_empresa">Cadastro da empresa</string>
    <string name="incricao_estadual">Inscrição Estadual</string>
    <string name="cnpj">CNPJ</string>
    <string name="senha_web_service">Senha para Emitir Nota</string>
    <string name="proximo">Próximo</string>
    <string name="nome_completo">Nome completo</string>
    <string name="funcionario_cadastrado">Funcionario Cadastrado!</string>
    <string name="funcionario">Funcionario</string>
    <string name="administrador">Administrador</string>
    <string name="categoria_ja_cadastrada">Categoria já tem cadastro</string>
    <string name="servico_ja_cadastrado">Serviço já tem cadastro</string>
    <string name="email_sem_cadastro">Email sem cadastrado</string>
    <string name="agendamento_realizado">Agendamento realizado!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agendar_horario">Agendar Horário</string>
    <string name="voltar">Voltar</string>
    <string name="minha_agenda">Minha Agenda</string>
    <string name="finalizar">Finalizar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="title_servico_list">Servicos</string>
    <string name="title_servico_detail">Servico Detail</string>
    <string name="servicos_realizados">Serviços Realizados</string>
</resources>
