<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.capelli.centrodebelezacapelli.view.CadastroUsuarioActivity"
    android:background="@drawable/degrade1">

    <android.support.constraint.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/nomeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tituloTextView"
            style="@style/edittext2"/>

        <EditText
            android:id="@+id/sobreNomeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/sobreNome"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/nomeEditText"
            style="@style/edittext2"/>

        <EditText
            android:id="@+id/telefoneFuncionarioEditText"
            android:layout_width="184dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="phone"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/sobreNomeEditText"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            style="@style/edittext2"/>

        <RadioGroup
            android:id="@+id/sexoRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toRightOf="@+id/telefoneFuncionarioEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sobreNomeEditText"
            app:layout_constraintHorizontal_bias="0.507"
            >

            <RadioButton
                android:id="@+id/masculinoRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                tools:layout_editor_absoluteX="219dp"
                tools:layout_editor_absoluteY="176dp"
                style="@style/textos2"
                />

            <RadioButton
                android:id="@+id/femininoRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                tools:layout_editor_absoluteX="219dp"
                tools:layout_editor_absoluteY="218dp"
                style="@style/textos2"/>

        </RadioGroup>

        <EditText
            android:id="@+id/emailFuncionarioEditText"
            style="@style/edittext2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="65dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneFuncionarioEditText" />

        <EditText
            android:id="@+id/senhaFuncionarioEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/emailFuncionarioEditText"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/edittext2"/>

        <EditText
            android:id="@+id/repetirEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/repetir_senha"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senhaFuncionarioEditText"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/edittext2"/>

        <Button
            android:id="@+id/cadastrarButton"
            style="@style/botoes2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="@string/cadastrar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repetirEditText"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/tituloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_clientes"
            android:textSize="@dimen/titulos"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            style="@style/textos2"
            app:layout_constraintHorizontal_bias="0.1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/deletarImageView"
            android:layout_width="38dp"
            android:layout_height="34dp"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
