<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/servicoCardView"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:layout_height="80dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="15dp"
    android:background="@drawable/degrade1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nome"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorPreto1"/>

        <TextView
            android:id="@+id/itemTempoEstimado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tempo_estimado"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorPreto1"/>

        <TextView
            android:id="@+id/itemValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/valor"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorPreto1"/>

    </LinearLayout>

</android.support.v7.widget.CardView>